# LFTH_WATER-FOUNTAIN

./: .gitignore  README.md
apps/api/: .env.example  .gitignore  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  models.py  seoul_api.py  settings.py
apps/api/app/routes/: measurements.py
apps/web/: .env.example  .gitignore  index.html  package-lock.json  vite.config.ts
apps/web/src/: App.css  App.tsx  index.css
apps/web/src/components/: GradeTimelineChart.tsx  Header.tsx  LatestTable.tsx  StationGradeCards.tsx  TimeSeriesChart.tsx
apps/web/src/hooks/: useWaterQuality.ts
apps/web/src/lib/: api.ts  grade.ts  normalize.ts
apps/web/src/types/: waterQuality.ts
docs/: README.md  STATUS.md  architecture.md  dashboard.html  grading.md  roadmap.md  seoul-api.md
docs/decisions/: ADR-0001-html-dashboard-as-context-doc.md  ADR-0002-worst-of-composite-grading.md  ADR-0003-threshold-duplication.md  README.md
shared/: stations.json
